--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=sandbox
 spring.datasource.password=sandbox
 
 # JPA
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
