--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
+
+# JPA
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=100
