--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 
 # JPA
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
